Container background shift fixed

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -107,11 +107,11 @@ div>div,
 div>div>div>div,
 div>div>div>div>div>div{ background: #222; }*/
 
-div{ background: #1a1a1a; }
-div>div{ background: #202020; }
-div>div>div{ background: #242424; }
-div>div>div>div{ background: #2a2a2a; }
-div>div>div>div>div{ background: #303030; }
+#dash>div{ background: #1a1a1a; }
+#dash>div>div{ background: #202020; }
+#dash>div>div>div{ background: #242424; }
+#dash>div>div>div>div{ background: #2a2a2a; }
+#dash>div>div>div>div>div{ background: #303030; }
 
 ::selection {
   color: #0fc;
